--- a/index.html
+++ b/index.html
@@ -31,18 +31,13 @@
         <h1>
 <a name="elloshare" class="anchor" href="#elloshare"><span class="octicon octicon-link"></span></a>elloshare</h1>
 
-<p>Want to download and install ElloShare?  Get an APK <a href="http://www.weatherlight.com/elloshare">here</a>.</p>
+<p>Want to download and install ElloShare?  Get an APK <a href="http://www.weatherlight.com/elloshare">here</a>.
+Want to get announcements about ElloShare?  Join the mailing list <a href="https://groups.google.com/forum/#!forum/elloshare-discuss">here</a>.</p>
 
 <p>ElloShare is a photo sharing app for Android.  It integrates with Gallery to make it easy to post images from your phone
-into Ello.</p>
+into Ello.  Use is simple.  First, <a href="http://lifehacker.com/5943562/how-to-sideload-android-apps">enable sideloading</a> for your Android device.  Then, just download ElloShare using your device's browser or copy it to an SD card and install it.</p>
 
-<p>Implementation is currently VERY rough.  It actually uses Crosswalk to sign in through a browser session to collect the
-necessary tokens to authenticate, upload, and post.  If you want to build this yourself, you need to download the Crosswalk
-project separately and follow the instructions to <a href="https://crosswalk-project.org/#documentation/embedding_crosswalk">include it as a library project</a>.</p>
-
-<p>I suspect that this can all be done with UrlConnection objects or the default Android webview, but I had a hard time confirming that so far.</p>
-
-<p>Please fork and modify.  Ello is about sharing art, and for many of us, that's mobile pictures.</p>
+<p>Implementation is currently VERY rough.  Please fork and modify.  Ello is about sharing art, and for many of us, that's mobile pictures.</p>
 
 <p>None of this would have been possible without the <a href="https://gist.github.com/conatus/cc665f917d5558c123bc">Ello research</a> done by github user <a href="https://github.com/conatus">conatus</a>.</p>
       </section>
