Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
         <h1>
 <a name="elloshare" class="anchor" href="#elloshare"><span class="octicon octicon-link"></span></a>elloshare</h1>
 
-<p>Want to download and install ElloShare?  Get an APK <a href="http://www.weatherlight.com/elloshare">here</a>.
-Want to get announcements about ElloShare?  Join the mailing list <a href="https://groups.google.com/forum/#!forum/elloshare-discuss">here</a>.</p>
+<h3>
+<a name="want-to-download-and-install-elloshare--get-an-apk-here" class="anchor" href="#want-to-download-and-install-elloshare--get-an-apk-here"><span class="octicon octicon-link"></span></a>Want to download and install ElloShare?  Get an APK <strong><a href="http://www.weatherlight.com/elloshare">here</a></strong>.</h3>
+
+<h3>
+<a name="want-to-get-announcements-about-elloshare--join-the-mailing-list-here" class="anchor" href="#want-to-get-announcements-about-elloshare--join-the-mailing-list-here"><span class="octicon octicon-link"></span></a>Want to get announcements about ElloShare?  Join the mailing list <strong><a href="https://groups.google.com/forum/#!forum/elloshare-discuss">here</a></strong>.</h3>
 
 <p>ElloShare is a photo sharing app for Android.  It integrates with Gallery to make it easy to post images from your phone
 into Ello.  Use is simple.  First, <a href="http://lifehacker.com/5943562/how-to-sideload-android-apps">enable sideloading</a> for your Android device.  Then, just download ElloShare using your device's browser or copy it to an SD card and install it.</p>
