--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
 <a name="elloshare" class="anchor" href="#elloshare"><span class="octicon octicon-link"></span></a>elloshare</h1>
 
 <h3>
-<a name="want-to-download-and-install-elloshare--get-an-apk-here" class="anchor" href="#want-to-download-and-install-elloshare--get-an-apk-here"><span class="octicon octicon-link"></span></a>Want to download and install ElloShare?  Get an APK <strong><a href="http://www.weatherlight.com/elloshare">here</a></strong>.</h3>
+<a name="elloshare-is-now-available-on-the-play-store" class="anchor" href="#elloshare-is-now-available-on-the-play-store"><span class="octicon octicon-link"></span></a>
+<strong>ElloShare is now available <a href="https://play.google.com/store/apps/details?id=com.weatherlight.elloshare">on the Play Store</a></strong>.</h3>
 
 <h3>
 <a name="want-to-get-announcements-about-elloshare--join-the-mailing-list-here" class="anchor" href="#want-to-get-announcements-about-elloshare--join-the-mailing-list-here"><span class="octicon octicon-link"></span></a>Want to get announcements about ElloShare?  Join the mailing list <strong><a href="https://groups.google.com/forum/#!forum/elloshare-discuss">here</a></strong>.</h3>
 
 <p>ElloShare is a photo sharing app for Android.  It integrates with Gallery to make it easy to post images from your phone
-into Ello.  Use is simple.  First, <a href="http://lifehacker.com/5943562/how-to-sideload-android-apps">enable sideloading</a> for your Android device.  Then, just download ElloShare using your device's browser or copy it to an SD card and install it.</p>
+into Ello.  Use is simple.  Just <a href="https://play.google.com/store/apps/details?id=com.weatherlight.elloshare">install it from the Play Store</a> and then use it either from the Launcher or from the sharing button in Gallery.</p>
 
-<p>Implementation is currently VERY rough.  Please fork and modify.  Ello is about sharing art, and for many of us, that's mobile pictures.</p>
+<p>Implementation is currently somewhay rough.  Please fork and modify.  Ello is about sharing art, and for many of us, that's mobile pictures.</p>
 
 <p>None of this would have been possible without the <a href="https://gist.github.com/conatus/cc665f917d5558c123bc">Ello research</a> done by github user <a href="https://github.com/conatus">conatus</a>.</p>
       </section>
